# freecad-mcp

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: aiderdesk-milestone-15b-acceptance.md  aiderdesk-milestone-15c-acceptance.md  architecture.md  codex-milestone-16-acceptance.md  codex-milestone-17-acceptance.md  codex-milestone-18-acceptance.md  codex-milestone-19-acceptance.md  codex-milestone-20-acceptance.md  codex-milestone-21-acceptance.md  codex-milestone-21-stabilization-acceptance.md  codex-milestone-23-acceptance.md  codex-milestone-24-acceptance.md  development.md  public-tool-inventory.md  sketch-geometry-transform-capabilities.md  sketch-reference-constraint-capabilities.md  sketch-topology-editing-capabilities.md
scripts/: accept_sketch_reference_constraint_stabilization.py  ci.py  clear-python-cache.ps1  compile_check.py  install-dev.ps1  probe_sketch_constraint_expressions.py  probe_sketch_geometry_transforms.py  probe_sketch_reference_constraint_capabilities.py  probe_sketch_reference_constraint_rollback.py  probe_sketch_reference_constraint_undo_capacity.py  probe_sketch_topology_editing.py  smoke_document_history.py  smoke_sketch_analysis.py  smoke_sketch_centered_rectangle.py  smoke_sketch_constraint_expressions.py  smoke_sketch_curved_profiles.py  smoke_sketch_editing.py  smoke_sketch_external_geometry.py  smoke_sketch_geometry_transforms.py  smoke_sketch_native_references.py  smoke_sketch_point_relationships.py  smoke_sketch_polygon_profiles.py  smoke_sketch_rectangle.py  smoke_sketch_reference_constraints.py  test.ps1  (+5 more)
(+215 files in other folders)
